# DankCord

./: .gitignore  Changelog.md  LICENSE.md  README.md  example.py  main.py  pyproject.toml  requirements.txt  setup.py
src/DankCord/: DankCord.py  DankMemer.py  Objects.py  __init__.py  api.py  core.py  exceptions.py  gateway.py  logger.py  objects.py  utilities.py  ws.py
