[build-system]
requires = ["setuptools", "orjson", "pyloggor", "websocket_client"]

[project]
name = "DankCord"
version = "1.0.111"
description = "The first python library for Dank Memer selfbots. Incredibly fast, secure, strong, and reliable."
license = {text = "MIT"}
authors = [
    {author = "Sxvxge", email = "sxvxge69@gmail.com"},
    {author = "ThePrivatePanda", email = "contact@privatepanda.co"}
]
readme = "README.md"

[tool.poetry]
repository = "https://github.com/Sxvxgee/DankCord"
documentation = "https://github.com/Sxvxgee/DankCord/blob/master/README.md"
requires-python = ">=3.8"
