[build-system]
requires = ["setuptools", "orjson", "pyloggor", "websocket_client"]

[project]
name = "DankCord"
version = "0.0.2.5"
description = "The first python library for Dank Memer selfbots. Incredibly fast, secure, strong, and reliable."
license = {text = "MIT"}
authors = [
    {author = "Sxvxge", email = "sxvxge69@gmail.com"},
    {author = "ThePrivatePanda", email = "contact@privatepanda.co"}
]
maintainers = [
    {author = "Sxvxge", email = "sxvxge69@gmail.com"},
    {author = "ThePrivatePanda", email = "contact@privatepanda.co"}
]
readme = "README.md"
keywords = [
    "bot", "automation", "discord", "discord-bot", "dank-memer",
    "dankmemer", "dank-memer-farm", "dank-memer-farmer", "dank-memer-coins",
    "dank-memer-coins-farmer"
]

[tool.poetry.urls]
"Author Portfolio" = "https://sxvxge.dev"
Discord = "https://discord.gg/XaQ6FAP3sm"
Github = "https://www.github.com/Sxvxgee/DankCord"

[tool.poetry]
repository = "https://github.com/Sxvxgee/DankCord"
documentation = "https://github.com/Sxvxgee/DankCord/blob/master/README.md"
requires-python = ">=3.8"
packages = [
    { include = "DankCord" }
]
