[tool.poetry]
name = "DankCord"
version = "0.0.3"
description = "The first python library for Dank Memer selfbots. Incredibly fast, secure, strong, and reliable."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Sxvxgee/DankCord"
documentation = "https://github.com/Sxvxgee/DankCord/blob/master/README.md"
authors = [
    {author = "Sxvxge", email = "sxvxge69@gmail.com"},
    {author = "ThePrivatePanda", email = "contact@privatepanda.co"}
]
maintainers = [
    {author = "Sxvxge", email = "sxvxge69@gmail.com"},
    {author = "ThePrivatePanda", email = "contact@privatepanda.co"}
]
packages = [
    { include = "DankCord" }
]
keywords = [
    "bot", "automation", "discord", "discord-bot", "dank-memer",
    "dankmemer", "dank-memer-farm", "dank-memer-farmer", "dank-memer-coins",
    "dank-memer-coins-farmer"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.urls]
"Author Portfolio" = "https://sxvxge.dev"
Discord = "https://discord.gg/XaQ6FAP3sm"
Github = "https://www.github.com/Sxvxgee/DankCord"

[build-system]
requires = ["setuptools", "orjson", "pyloggor", "websocket_client"]
